<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AddUserFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:padding="15dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poetsen_one_regular"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/tv_edit_info"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="76dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toStartOf="@+id/et_update_name"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail" />

    <EditText
        android:id="@+id/et_update_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/favorite_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/et_update_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <EditText
        android:id="@+id/et_update_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:hint="Color Favorito"
        android:textSize="15sp"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_update_name"
        app:layout_constraintStart_toEndOf="@+id/tvColor" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="144dp"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/date_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/et_update_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColor" />

    <EditText
        android:id="@+id/et_update_date"
        android:layout_width="154dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:clickable="false"
        android:focusable="false"
        android:hint="Fecha de Nacimiento"
        android:inputType="date"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/et_update_color" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="144dp"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/city_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintEnd_toStartOf="@+id/et_update_city"

        />

    <EditText
        android:id="@+id/et_update_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:hint="Ciudad Favorita"
        android:inputType="textCapWords"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_update_date"
        app:layout_constraintStart_toEndOf="@+id/tvCity" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="144dp"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/number_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCity"
        app:layout_constraintEnd_toStartOf="@+id/et_update_number" />

    <EditText
        android:id="@+id/et_update_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:hint="Número Favorito"
        android:textSize="15sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_update_city"
        app:layout_constraintStart_toEndOf="@+id/tvNumber" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="144dp"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/location_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber"
        app:layout_constraintEnd_toStartOf="@+id/et_update_location_text" />

    <EditText
        android:id="@+id/et_update_location_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:hint="Localización"
        android:textSize="15sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_update_number"
        app:layout_constraintStart_toEndOf="@+id/tvLocation" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_map"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/color_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_update_location_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        android:backgroundTint="@color/color_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_map" />



</androidx.constraintlayout.widget.ConstraintLayout>